happy with rankbytype

--- a/main.tex
+++ b/main.tex
@@ -110,7 +110,7 @@ We present programming by example that can utilize user defined higher order fun
 \input{secs/offline}
 
 \section{Online: Fitting Functions to Examples} \label{synth}
-\input{secs/online}
+\input{secs/online0}
 
 \section{Evaluation}\label{evaluation}
 \input{secs/eval}
