--- a/secs/online0.tex
+++ b/secs/online0.tex
@@ -13,9 +13,9 @@ The search will always terminate since we are working over a finite space of gen
 
 % getExampleType
 % assignRType
-\input{secs/online_assign}
+\input{secs/online1_assign}
 
-\input{secs/online_rankByTypeMatch}
+\input{secs/online2_rankByTypeMatch}
 
-\input{secs/online_makeFxns}
+\input{secs/online3_makeFxns}
 
