progress on comp function synth

--- a/main.tex
+++ b/main.tex
@@ -58,6 +58,7 @@
   stringstyle=\color{mymauve},     % string literal style
   %title=\lstname                  % show the filename of files included with \lstinputlisting; also try caption instead of title
   mathescape=true,
+  tabsize=3,
   literate=*{->}{{\textcolor{blue}{$\to$}}}{1}
            {<-}{{\textcolor{blue}{$\leftarrow$}}}{1}
 }
