move to an unstructured file system... :)

--- a/main.tex
+++ b/main.tex
@@ -96,30 +96,30 @@ We present programming by example that can utilize user defined higher order fun
 
 
 \section{Introduction} \label{intro}
-\input{secs/intro}
+\input{intro}
 
 \section{Motivating Examples} \label{examples}
-\input{secs/examples}
+\input{examples}
 
 \section{Problem Formulation} \label{problem}
-\input{secs/problem}
+\input{problem}
 
 \section{System Overview}
-\input{secs/overview}
+\input{overview}
 
 \section{Offline: Synthesis Engine Construction}
-\input{secs/offline}
+\input{offline}
 
 \section{Online: Fitting Functions to Examples} \label{synth}
-\input{secs/online0}
+\input{online0}
 
 \section{Evaluation}\label{evaluation}
-\input{secs/eval}
+\input{eval}
 
 \section{Related Work and Conclusions}\label{conclusions}
-\input{secs/conclusion}
+\input{conclusion}
 
 \bibliographystyle{abbrvnat}
-\bibliography{sample}
+\bibliography{myBib}
 
 \end{document}
