--- a/online0.tex
+++ b/online0.tex
@@ -13,9 +13,9 @@ The search will always terminate since we are working over a finite space of gen
 
 % getExampleType
 % assignRType
-\input{secs/online1_assign}
+\input{online1_assign}
 
-\input{secs/online2_rankByTypeMatch}
+\input{online2_rankByTypeMatch}
 
-\input{secs/online3_makeFxns}
+\input{online3_makeFxns}
 
