--- a/examples.tex
+++ b/examples.tex
@@ -1,3 +1,7 @@
+\section{Motivating Examples} 
+\label{examples}
+
+
 As an introduction to \ourTool/, imagine that a user wants to synthesis the simple \codeinline{stutter} function that will duplicate each element of a list.
 The user will provide an example, and \ourTool/ will synthesis a program \codeinline{concatMap (replicate 2)} that fit that example.
 
