--- a/intro.tex
+++ b/intro.tex
@@ -1,3 +1,6 @@
+\section{Introduction} 
+\label{intro}
+
 (1) We use refinement type based inductive generalization (inductively deriving properties from examples).
 
 (2) from the higher order examples we use deductive reasoning to automate refinement type inference on higher order function.
