--- a/problem.tex
+++ b/problem.tex
@@ -1,3 +1,7 @@
+\section{Problem Formulation} 
+\label{problem}
+
+
 Synthesizing correct programs is a well research problem, with a large body of work\cite{stuff}.
 However, if programming-by-example is to become a mainstream tool for programmers, the synthesized code must be easy for a human to read and modify. 
 The aim of \ourTool/ is to synthesize programs from examples that utilize user defined code.
