--- a/defs.tex
+++ b/defs.tex
@@ -4,6 +4,6 @@
 
 
 \def\ourTool/{our tool}
-\def\lhask/{liquidHaskell}
+\def\lhask/{LiquidHaskell}
 
 \newcommand{\codeinline}[1]{\lstinline[basicstyle=\small]{#1}}
