--- a/myBib.bib
+++ b/myBib.bib
@@ -1,3 +1,69 @@
+@inproceedings{DBLP:conf/haskell/VazouSJ14,
+  author    = {Niki Vazou and
+               Eric L. Seidel and
+               Ranjit Jhala},
+  title     = {LiquidHaskell: experience with refinement types in the real world},
+  booktitle = {Proceedings of the 2014 {ACM} {SIGPLAN} symposium on Haskell, Gothenburg,
+               Sweden, September 4-5, 2014},
+  pages     = {39--51},
+  year      = {2014}
+}
+
+
+@inproceedings{DBLP:conf/esop/VazouRJ13,
+  author    = {Niki Vazou and
+               Patrick Maxim Rondon and
+               Ranjit Jhala},
+  title     = {Abstract Refinement Types},
+  booktitle = {Programming Languages and Systems - 22nd European Symposium on Programming,
+               {ESOP} 2013, Held as Part of the European Joint Conferences on Theory
+               and Practice of Software, {ETAPS} 2013, Rome, Italy, March 16-24,
+               2013. Proceedings},
+  pages     = {209--228},
+  year      = {2013}
+}
+
+
+@inproceedings{DBLP:conf/icfp/VazouSJVJ14,
+  author    = {Niki Vazou and
+               Eric L. Seidel and
+               Ranjit Jhala and
+               Dimitrios Vytiniotis and
+               Simon L. Peyton Jones},
+  title     = {Refinement types for Haskell},
+  booktitle = {Proceedings of the 19th {ACM} {SIGPLAN} international conference on
+               Functional programming, Gothenburg, Sweden, September 1-3, 2014},
+  pages     = {269--282},
+  year      = {2014}
+}
+
+
+@BOOK{euterpea,
+ author={Paul Hudak},
+ title = {The Haskell School of Music -- from Signal to Symphonies},
+ year = {2014},
+ month={January},
+ publisher = {Version 2.6}
+ }
+
+
+@misc{hackage,
+  title = {{Hackage} -- the Haskell community's central package archive},
+  howpublished = {\url{https://hackage.haskell.org/}},
+  note = {Accessed: 2015-11-10}
+}
+
+@misc{stackage,
+  title = {{Stackage} -- a stable source of Haskell packages},
+  howpublished = {\url{https://www.stackage.org/}},
+  note = {Accessed: 2015-11-10}
+}
+
+
+
+
+
+
 @Article{Einstein,
   author =       "Albert Einstein",
   title =        "{Zur Elektrodynamik bewegter K{\"o}rper}. ({German})
