--- a/myBib.bib
+++ b/myBib.bib
@@ -1,3 +1,16 @@
+@inproceedings{DBLP:conf/pldi/GveroKKP13,
+  author    = {Tihomir Gvero and
+               Viktor Kuncak and
+               Ivan Kuraj and
+               Ruzica Piskac},
+  title     = {Complete completion using types and weights},
+  booktitle = {{ACM} {SIGPLAN} Conference on Programming Language Design and Implementation,
+               {PLDI} '13, Seattle, WA, USA, June 16-19, 2013},
+  pages     = {27--38},
+  year      = {2013}
+}
+
+
 @inproceedings{DBLP:conf/haskell/VazouSJ14,
   author    = {Niki Vazou and
                Eric L. Seidel and
