--- a/online3_makeFxns.tex
+++ b/online3_makeFxns.tex
@@ -1,12 +1,12 @@
 \subsection{Component function generation}\label{makeFxns}
 % makeFxns
 
-Recalling the solution space of programs defined in Section \ref{problem}, \ourTool/ must now find fisrt order function for each of the higher order functions that are still candidates.
+Recalling the solution space of programs defined in Section \ref{problem}, \ourTool/ must now find first order function for each of the higher order functions that are still candidates (line 18 of Listing \ref{listing:Algo}).
 For a given higher order function, \ourTool/ can choose component functions by reusing the weighted type matching algorithm from Listing \ref{valueAlgo}.
-We are looking for first order functions that will type check against the component signature.
-In order to do this, we need to know the concrete type signature of higher order function when applied to the examples.
-
-Similar to Listing \ref{hoRank}, we show an example of how type matching is applied over first order functions in Listing \ref{compRank}.
+Since examples must be given as a concrete type, we can always partially specialize our candidate higher order function. 
+We then search for first order functions that will type check against the partially specialized component signature.
+This partial specialization is a way of extracting more information out of our examples, and significantly reduces the space of candidate first order functions.
+Similar to Listing \ref{hoRank}, we show an example of how type matching is applied over first order functions in Listing \ref{comprank}.
 
 \begin{lstlisting}[caption=Ranking component function,label=comprank]
 examples ::            [Int] -> [Int]
@@ -23,8 +23,9 @@ f4 :: [Bool] -> [Bool] -- value is Nothing
 
 \subsection{Initial Values}
 
-In the case that neither of those situations hold, we try to apply a value to the first order function.
-For instance, if the component signature is \codeinline{::Int->Int}, and we have the first order functions \codeinline{(+)::Int->Int->Int}, we apply some initial values to \codeinline{(+)} to get a new function (e.g. \codeinline{(+1)}) that fits the component signature.
+In addition to finding first order functions where the arity of the kinds is equal to the component function, we may also want ``larger'' functions that have been applied to initial values.
+For examples, if the component signature is \codeinline{::Int->Int}, we may have the first order functions \codeinline{(+)::Int->Int->Int} in scope.
+By applying some initial values to \codeinline{(+)}, we can get a new function (e.g. \codeinline{(+1)::Int->Int}) that fits the component signature.
 
 If the initial value's type is an instance of Monoid, we can extract the unit value (named mempty in Haskell's monoid typeclass\cite{monoid}) to use as our initial value. For lists, the unit element is []. However, there are two valid monoids for numbers, using either (+) or (*) as the operators and resulting in unit elements 0 and 1 respectively. We take both of these values (along with other common, useful values of -1, and 2) as possibilities since the cost of testing both values is relatively small.
 
@@ -40,19 +41,13 @@ x :: Int
 x = 5
 \end{lstlisting}
 
-Presented with the problem of finding integer values to satisfy the examples may initially seem like a good application for an SMT solver. However, keep in mind that we do not in general know what we are trying to solve - the actual use of these variables is hidden within the function definition. Since in this work we want to stick to a type directed approach, rather than code analysis, we will not be able to unravel these functions.
+Presented with the problem of finding integer values to satisfy the examples may initially seem like a good application for an SMT solver.
+However, keep in mind that we do not in general know what we are trying to solve - the actual use of these variables is hidden within the function definition. Since in this work we maintain a primarily type directed approach, rather than code analysis, we will not be able to unravel these functions.
 
-In the implementation, we actually build new functions with the name of the composed functions, and adjust the type signature accordingly.
-
-Before proceeding to component function synthesis, we must also address an issue first presented in Section \ref{problem}.
-It is possible for a higher order function to need initial values in addition to a component function.
+We must also address the issue first presented in Section \ref{problem}, that it is possible for a higher order function to need initial values in addition to a component function.
 For example, the \codeinline{map} function only takes a first order function, while \codeinline{foldl :: (a-> b-> a)-> a-> [b]-> a} requires an initial value for \codeinline{a}.
-While the process described so far handles the former, initial values must also be addressed.
+Using a similar process as for first order function application, we can apply values until the higher order function only needs the example input to complete execution.
+To identify initial values in a higher order type signature, we can use our previous assumption that all higher order function have been partially curried to the type \codeinline{_ -> *-> *}. 
+Adding the further assumption that only one first order function maybe be passed to the higher order function, we simply tag any non-function type in the hole as an initial value.
 
-For each higher-order function, we supply it with arguments until it is compatible with the type signature implied by the example set. In accordance with our problem definition in Section \ref{problem}, we can assume the final argument of the function is the input. Any other initial value types are satisfied by selecting from a pool of default values, and function types are satisfied by searching for first-order functions that would make the resulting signatures match. If it is not possible to find values that fit, the search moves on to the next higher-order function.
-
-To identify initial values in a type signature, we can use our previous assumption that all higher order function have been partially curried to the type \codeinline{_ -> *-> *}. Adding the further assumption that only one first order function maybe be passed to the higher order function, we simply tag any non-function type in the hole as an initial value.
-
-
-
-%If the types of a higher order function do not match, we 
+%In the implementation, we actually build new functions with the name of the composed functions, and adjust the type signature accordingly.
