--- a/main.tex
+++ b/main.tex
@@ -22,7 +22,9 @@
 
 
 \usepackage[usenames,dvipsnames]{color}
-
+\usepackage[latin1]{inputenc}
+\usepackage{tikz}
+\usetikzlibrary{shapes,arrows}
 \input{defs}
 
 
