--- a/myBib.bib
+++ b/myBib.bib
@@ -50,6 +50,88 @@
   year      = {2014}
 }
 
+@inproceedings{Osera:2015,
+ author = {Osera, Peter-Michael and Zdancewic, Steve},
+ title = {Type-and-example-directed Program Synthesis},
+ booktitle = {Proceedings of the 36th ACM SIGPLAN Conference on Programming Language Design and Implementation},
+ series = {PLDI 2015},
+ year = {2015},
+ isbn = {978-1-4503-3468-6},
+ location = {Portland, OR, USA},
+ pages = {619--630},
+ numpages = {12},
+ url = {http://doi.acm.org/10.1145/2737924.2738007},
+ doi = {10.1145/2737924.2738007},
+ acmid = {2738007},
+ publisher = {ACM},
+ address = {New York, NY, USA},
+ keywords = {Functional Programming, Program Syn- thesis, Proof Search, Type Theory},
+} 
+
+@inproceedings{Feser:2015,
+ author = {Feser, John K. and Chaudhuri, Swarat and Dillig, Isil},
+ title = {Synthesizing Data Structure Transformations from Input-output Examples},
+ booktitle = {Proceedings of the 36th ACM SIGPLAN Conference on Programming Language Design and Implementation},
+ series = {PLDI 2015},
+ year = {2015},
+ isbn = {978-1-4503-3468-6},
+ location = {Portland, OR, USA},
+ pages = {229--239},
+ numpages = {11},
+ url = {http://doi.acm.org/10.1145/2737924.2737977},
+ doi = {10.1145/2737924.2737977},
+ acmid = {2737977},
+ publisher = {ACM},
+ address = {New York, NY, USA},
+ keywords = {Program synthesis, automated deduction, data transformations, programming by example, search-based synthesis},
+} 
+
+@inproceedings{DBLP:conf/aaip/HofmannKS09,
+  author    = {Martin Hofmann and
+               Emanuel Kitzelmann and
+               Ute Schmid},
+  title     = {Porting IgorII from Maude to Haskell},
+  booktitle = {Approaches and Applications of Inductive Programming, Third International
+               Workshop, {AAIP} 2009, Edinburgh, UK, September 4, 2009. Revised Papers},
+  pages     = {140--158},
+  year      = {2009},
+  crossref  = {DBLP:conf/aaip/2009},
+  url       = {http://dx.doi.org/10.1007/978-3-642-11931-6_7},
+  doi       = {10.1007/978-3-642-11931-6_7},
+  timestamp = {Mon, 06 Sep 2010 18:46:03 +0200},
+  biburl    = {http://dblp.uni-trier.de/rec/bib/conf/aaip/HofmannKS09},
+  bibsource = {dblp computer science bibliography, http://dblp.org}
+}
+
+@inproceedings{DBLP:conf/agi/Katayama15,
+  author    = {Susumu Katayama},
+  title     = {Towards Human-Level Inductive Functional Programming},
+  booktitle = {Artificial General Intelligence - 8th International Conference, {AGI}
+               2015, {AGI} 2015, Berlin, Germany, July 22-25, 2015, Proceedings},
+  pages     = {111--120},
+  year      = {2015},
+  crossref  = {DBLP:conf/agi/2015},
+  url       = {http://dx.doi.org/10.1007/978-3-319-21365-1_12},
+  doi       = {10.1007/978-3-319-21365-1_12},
+  timestamp = {Thu, 16 Jul 2015 17:45:39 +0200},
+  biburl    = {http://dblp.uni-trier.de/rec/bib/conf/agi/Katayama15},
+  bibsource = {dblp computer science bibliography, http://dblp.org}
+}
+
+@inproceedings{DBLP:conf/aaip/Katayama09,
+  author    = {Susumu Katayama},
+  title     = {Recent Improvements of MagicHaskeller},
+  booktitle = {Approaches and Applications of Inductive Programming, Third International
+               Workshop, {AAIP} 2009, Edinburgh, UK, September 4, 2009. Revised Papers},
+  pages     = {174--193},
+  year      = {2009},
+  crossref  = {DBLP:conf/aaip/2009},
+  url       = {http://dx.doi.org/10.1007/978-3-642-11931-6_9},
+  doi       = {10.1007/978-3-642-11931-6_9},
+  timestamp = {Mon, 06 Sep 2010 13:25:28 +0200},
+  biburl    = {http://dblp.uni-trier.de/rec/bib/conf/aaip/Katayama09},
+  bibsource = {dblp computer science bibliography, http://dblp.org}
+}
 
 @BOOK{euterpea,
  author={Paul Hudak},
@@ -73,18 +155,3 @@
 }
 
 
-
-
-
-
-@Article{Einstein,
-  author =       "Albert Einstein",
-  title =        "{Zur Elektrodynamik bewegter K{\"o}rper}. ({German})
-                 [{On} the electrodynamics of moving bodies]",
-  journal =      "Annalen der Physik",
-  volume =       "322",
-  number =       "10",
-  pages =        "891--921",
-  year =         "1905",
-  DOI =          "http://dx.doi.org/10.1002/andp.19053221004"
-} 
