--- a/online3_makeFxns.tex
+++ b/online3_makeFxns.tex
@@ -21,7 +21,7 @@ f3 :: Int    -> Int    -- value is 41
 f4 :: [Bool] -> [Bool] -- value is Nothing
 \end{lstlisting}
 
-\subsection{Initial Values}
+\subsection{Initial Values}\label{initVals}
 
 In addition to finding first order functions where the arity of the kinds is equal to the component function, we may also want ``larger'' functions that have been applied to initial values.
 For examples, if the component signature is \codeinline{::Int->Int}, we may have the first order functions \codeinline{(+)::Int->Int->Int} in scope.
