--- a/myBib.bib
+++ b/myBib.bib
@@ -94,13 +94,7 @@
   booktitle = {Approaches and Applications of Inductive Programming, Third International
                Workshop, {AAIP} 2009, Edinburgh, UK, September 4, 2009. Revised Papers},
   pages     = {140--158},
-  year      = {2009},
-  crossref  = {DBLP:conf/aaip/2009},
-  url       = {http://dx.doi.org/10.1007/978-3-642-11931-6_7},
-  doi       = {10.1007/978-3-642-11931-6_7},
-  timestamp = {Mon, 06 Sep 2010 18:46:03 +0200},
-  biburl    = {http://dblp.uni-trier.de/rec/bib/conf/aaip/HofmannKS09},
-  bibsource = {dblp computer science bibliography, http://dblp.org}
+  year      = {2009}
 }
 
 @inproceedings{DBLP:conf/agi/Katayama15,
@@ -109,13 +103,7 @@
   booktitle = {Artificial General Intelligence - 8th International Conference, {AGI}
                2015, {AGI} 2015, Berlin, Germany, July 22-25, 2015, Proceedings},
   pages     = {111--120},
-  year      = {2015},
-  crossref  = {DBLP:conf/agi/2015},
-  url       = {http://dx.doi.org/10.1007/978-3-319-21365-1_12},
-  doi       = {10.1007/978-3-319-21365-1_12},
-  timestamp = {Thu, 16 Jul 2015 17:45:39 +0200},
-  biburl    = {http://dblp.uni-trier.de/rec/bib/conf/agi/Katayama15},
-  bibsource = {dblp computer science bibliography, http://dblp.org}
+  year      = {2015}
 }
 
 @inproceedings{DBLP:conf/aaip/Katayama09,
@@ -124,13 +112,7 @@
   booktitle = {Approaches and Applications of Inductive Programming, Third International
                Workshop, {AAIP} 2009, Edinburgh, UK, September 4, 2009. Revised Papers},
   pages     = {174--193},
-  year      = {2009},
-  crossref  = {DBLP:conf/aaip/2009},
-  url       = {http://dx.doi.org/10.1007/978-3-642-11931-6_9},
-  doi       = {10.1007/978-3-642-11931-6_9},
-  timestamp = {Mon, 06 Sep 2010 13:25:28 +0200},
-  biburl    = {http://dblp.uni-trier.de/rec/bib/conf/aaip/Katayama09},
-  bibsource = {dblp computer science bibliography, http://dblp.org}
+  year      = {2009}
 }
 
 @BOOK{euterpea,
