--- a/myBib.bib
+++ b/myBib.bib
@@ -50,6 +50,17 @@
   year      = {2014}
 }
 
+
+@inproceedings{Osera:2016,
+ author = {Frankle, Jonathan and Osera, Peter-Michael and Walker, David  and Zdancewic,  Steve },
+ title = {Example-Directed Synthesis: A Type-Theoretic Interpretation},
+ booktitle = {Proceedings of POPL 2016},
+ note = {To appear.}
+} 
+
+
+
+
 @inproceedings{Osera:2015,
  author = {Osera, Peter-Michael and Zdancewic, Steve},
  title = {Type-and-example-directed Program Synthesis},
