--- a/related.tex
+++ b/related.tex
@@ -8,7 +8,7 @@ One of the most closely related works in terms of the aspirations is MagicHaskel
 
 MagicHaskeller work is in the same AI focused domain of inductive programming as the tool IgorII~\cite{DBLP:conf/aaip/HofmannKS09}. IgorII however takes a very code analysis heavy approach, having been originally developed for Maude, then ported to Haskell.
 
-One of the motivating works for exploring type-directed programming by example, especially over recursively defined datatypes is MYTH introduced in~\cite{Osera:2015}. The natural extension of this work in the usability direction was to include a more lightweight and flexible support for user defined and imported datatypes. The $\Lambda^2$ tool also focuses on deriving programs over recursively defined datatypes~\cite{Feser:2015}. One of the major barriers to an average user with these tools, is that the generated code operates on the inner workings on a datatype. While this provides a complete picture of all the data manipulation, often a user might prefer to simply be provided with high level, functioning code. Building in support and the ability to reason on user defined functions in \ourTool/ has made this natural synthesis possible.
+One of the motivating works for exploring type-directed programming by example, especially over recursively defined datatypes is MYTH~\cite{Osera:2015, Osera:2016}. The natural extension of this work in the usability direction was to include a more lightweight and flexible support for user defined and imported datatypes. The $\Lambda^2$ tool also focuses on deriving programs over recursively defined datatypes~\cite{Feser:2015}. One of the major barriers to an average user with these tools, is that the generated code operates on the inner workings on a datatype. While this provides a complete picture of all the data manipulation, often a user might prefer to simply be provided with high level, functioning code. Building in support and the ability to reason on user defined functions in \ourTool/ has made this natural synthesis possible.
 
 Another feature these works support is the synthesis of first order function.
 According to our problem specification in Section \ref{problem}, we are only focused on synthesizing higher order functions. 
